--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- davalebis sekcia -->
     <section>
+        <img src="https://www.publicdomainpictures.net/pictures/320000/velka/background-image.png" alt="image">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium corporis, repellendus reprehenderit officiis quae enim at natus hic fuga ullam sed aut dicta ea eos repellat nisi aspernatur. Laborum, earum!</p>
         <div class="bg-image">
             <div class="container-block">
                 <h4>ABOUT US</h4>
