--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="keywords" content="HTML,CSS,Flex, Responsive, Form">
     <meta name="author" content="Kristina">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fb meta tags -->
+    <meta property="og:url"                content="https://kristina-makalatia.github.io/lesson10-1119/index.html" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Our Fb Title" />
+    <meta property="og:description"        content="Our Fb Description" />
+    <meta property="og:image"              content="https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510__340.jpg" />
     <title>Lesson 10</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
